--- a/SistemIuranBEMITD/src/main/resources/templates/formCreateKelas.html
+++ b/SistemIuranBEMITD/src/main/resources/templates/formCreateKelas.html
@@ -90,7 +90,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" th:href="@{/payment}" style="color: deepskyblue">
+            <a class="nav-link" th:href="@{/bendaharabem/payment}" style="color: deepskyblue">
                 <i class="fas fa-fw fa-money-bill" style="color: deepskyblue"></i>
                 <span>Payment</span></a>
         </li>
@@ -110,45 +110,28 @@
     <div id="content-wrapper">
         <ol class="breadcrumb" style="background: #f5f5f5">
             <li class="breadcrumb-item" style="background: #f5f5f5">
-                <a th:href="@{/index}" style="color: deepskyblue" class="fas fa-home">   Home</a>
+                <a th:href="@{/bendaharabem/index}" style="color: deepskyblue" class="fas fa-home">   Home</a>
             </li>
             <li class="breadcrumb-item">
-                <a th:href="@{/data}" style="color:deepskyblue">Data</a>
+                <a th:href="@{/bendaharabem/data}" style="color:deepskyblue">Data Kelas</a>
             </li>
             <li class="breadcrumb-item active">Create</li>
         </ol>
         <hr>
         <div class="container-fluid">
-            <h4>Tambah Mahasiswa</h4>
+            <h4>Kelas Baru</h4>
             <br>
-            <form th:object="${mahasiswa}" th:action="@{/data/create}" method="post">
+            <form th:object="${kelas}" th:action="@{/bendaharabem/data/create}" method="post">
                 <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">NIM</label>
+                    <label class="col-sm-2 col-form-label">Kode Kelas</label>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control" th:field="*{nim}"/>
+                        <input type="text" class="form-control" th:field="*{kode}"/>
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Nama Mahasiswa</label>
+                    <label class="col-sm-2 col-form-label">Program Studi</label>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control" th:field="*{nama}"/>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="inputJk" class="col-sm-2 col-form-label">Jenis Kelamin</label>
-                    <div class="col-sm-2">
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="inputJk" id="inputJk" value="Laki-Laki" th:field="*{jenis_kelamin}" required>
-                            <label class="form-check-label" for="inputJk">
-                                Laki-Laki
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="inputJk" id="inputJk" value="Perempuan" th:field="*{jenis_kelamin}" required>
-                            <label class="form-check-label" for="inputJk">
-                                Perempuan
-                            </label>
-                        </div>
+                        <input type="text" class="form-control" th:field="*{prodi}"/>
                     </div>
                 </div>
                 <div class="form-group">
