--- a/SistemIuranBEMITD/src/main/resources/templates/formEdit.html
+++ b/SistemIuranBEMITD/src/main/resources/templates/formEdit.html
@@ -115,7 +115,7 @@
             <li class="breadcrumb-item">
                 <a th:href="@{/data}" style="color:deepskyblue">Data</a>
             </li>
-            <li class="breadcrumb-item active">Create</li>
+            <li class="breadcrumb-item active">Edit</li>
         </ol>
         <hr>
         <div class="container-fluid">
@@ -148,6 +148,24 @@
                             <label class="form-check-label" for="inputJk">
                                 Perempuan
                             </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Jumlah Iuran (.Rp)</label>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:field="*{iuran}"/>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Status Pembayaran</label>
+                    <div class="col-sm-2">
+                        <div class="form-group">
+                            <label>Select list</label>
+                            <select class="form-control">
+                                <option value="Belum Bayar">Belum Bayar</option>
+                                <option value="Sudah Bayar">Sudah Bayar</option>
+                            </select>
                         </div>
                     </div>
                 </div>
