--- a/SistemIuranBEMITD/src/main/resources/templates/viewdetail.html
+++ b/SistemIuranBEMITD/src/main/resources/templates/viewdetail.html
@@ -117,36 +117,34 @@
         </ol>
         <hr>
         <div class="container-fluid">
-            <form>
-                <div class="form-group row">
-                    <label for="staticNim" class="col-sm-2 col-form-label">NIM</label>
-                    <div class="col-sm-10" th:each="mahasiswas : ${mahasiswa}">
-                        <input type="text" readonly class="form-control-plaintext" id="staticNim"  th:value="${mahasiswas.nim}">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="staticNim" class="col-sm-2 col-form-label">Nama Mahasiswa</label>
-                    <div class="col-sm-10" th:each="mahasiswas : ${mahasiswa}">
-                        <input type="text" readonly class="form-control-plaintext" id="staticNim"  th:value="${mahasiswas.nama}">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="staticNim" class="col-sm-2 col-form-label">Jenis Kelamin</label>
-                    <div class="col-sm-10" th:each="mahasiswas : ${mahasiswa}">
-                        <input type="text" readonly class="form-control-plaintext" id="staticNim"  th:value="${mahasiswas.jenis_kelamin}">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="staticNim" class="col-sm-2 col-form-label">Status Pembayaran</label>
-                    <div class="col-sm-10" th:each="mahasiswas : ${mahasiswa}">
-                        <input type="text" readonly class="form-control-plaintext" id="staticNim"  th:value="${mahasiswas.status}">
-                    </div>
-                </div>
-            <div>
-                <a class="btn btn-info" th:href="@{/data}" style="background: deepskyblue">Edit</a>
+            <table class="table table-condensed detail-view col-6 col-sm-4">
+                <tbody>
+                <tr th:each="mahasiswas : ${mahasiswa}">
+                    <th >NIM</th>
+                    <td th:text="${mahasiswas.nim}"></td>
+                </tr>
+                <tr th:each="mahasiswas : ${mahasiswa}">
+                    <th>Nama Mahasiswa</th>
+                    <td th:text="${mahasiswas.nama}"></td>
+                </tr>
+                <tr th:each="mahasiswas : ${mahasiswa}">
+                    <th>Jenis Kelamin</th>
+                    <td th:text="${mahasiswas.jenis_kelamin}"></td>
+                </tr>
+                <tr th:each="mahasiswas : ${mahasiswa}">
+                    <th>Jumlah Iuran</th>
+                    <td th:text="${mahasiswas.iuran}"></td>
+                </tr>
+                <tr th:each="mahasiswas : ${mahasiswa}">
+                    <th>Status Pembayaran</th>
+                    <td th:text="${mahasiswas.status}"></td>
+                </tr>
+                </tbody>
+            </table>
+            <div th:each="mahasiswas : ${mahasiswa}">
+                <a class="btn btn-info" th:href="${'/data/edit/' +mahasiswas.nim}" style="background: deepskyblue">Edit</a>
             </div>
         </div>
-
         <!-- Logout Modal-->
         <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
