menambahkan fungsi untuk user login dan role

--- a/SistemIuranBEMITD/src/main/resources/templates/Form/formCreatePengumuman.html
+++ b/SistemIuranBEMITD/src/main/resources/templates/Form/formCreatePengumuman.html
@@ -84,13 +84,13 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav" style="background: white">
         <li class="nav-item active">
-            <a class="nav-link" th:href="@{/index}" style="color: deepskyblue">
+            <a class="nav-link" th:href="@{/bendaharabem/index}" style="color: deepskyblue">
                 <i class="fas fa-fw fa-tachometer-alt" style="color: deepskyblue"></i>
                 <span>Dashboard</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" th:href="@{/payment}" style="color: deepskyblue">
+            <a class="nav-link" th:href="@{/bendaharabem/payment}" style="color: deepskyblue">
                 <i class="fas fa-fw fa-money-bill" style="color: deepskyblue"></i>
                 <span>Payment</span></a>
         </li>
@@ -110,63 +110,25 @@
     <div id="content-wrapper">
         <ol class="breadcrumb" style="background: #f5f5f5">
             <li class="breadcrumb-item" style="background: #f5f5f5">
-                <a th:href="@{/index}" style="color: deepskyblue" class="fas fa-home">   Home</a>
+                <a th:href="@{/bendaharabem/index}" style="color: deepskyblue" class="fas fa-home">   Home</a>
             </li>
-            <li class="breadcrumb-item">
-                <a th:href="@{/data}" style="color:deepskyblue">Data</a>
-            </li>
-            <li class="breadcrumb-item active">Edit</li>
+            <li class="breadcrumb-item active">Create</li>
         </ol>
         <hr>
-        <div class="container-fluid">
-            <h4>Tambah Mahasiswa</h4>
+        <div class="containe r-fluid">
+            <h4>Buat Pengumuman</h4>
             <br>
-            <form th:object="${mahasiswa}" th:action="@{/data/create}" method="post">
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">NIM</label>
-                    <div class="col-sm-2">
-                        <input type="text" class="form-control" th:field="*{nim}"/>
+            <form th:object="${pengumuman}" th:action="@{/bendaharabem/pengumuman/create}" method="post">
+                <div class="form-group">
+                    <label class="col-sm-2 col-form-label">Judul pengumuman</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" th:field="*{judul}" required/>
                     </div>
                 </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Nama Mahasiswa</label>
-                    <div class="col-sm-2">
-                        <input type="text" class="form-control" th:field="*{nama}"/>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="inputJk" class="col-sm-2 col-form-label">Jenis Kelamin</label>
-                    <div class="col-sm-2">
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="inputJk" id="inputJk" value="Laki-Laki" th:field="*{jenis_kelamin}" required>
-                            <label class="form-check-label" for="inputJk">
-                                Laki-Laki
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="inputJk" id="inputJk" value="Perempuan" th:field="*{jenis_kelamin}" required>
-                            <label class="form-check-label" for="inputJk">
-                                Perempuan
-                            </label>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Jumlah Iuran (.Rp)</label>
-                    <div class="col-sm-2">
-                        <input type="text" class="form-control" th:field="*{iuran}"/>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Status Pembayaran</label>
-                    <div class="col-sm-2">
-                        <div class="form-group">
-                            <label>Select list</label>
-                            <select class="form-control">
-                                <option value="Belum Bayar">Belum Bayar</option>
-                                <option value="Sudah Bayar">Sudah Bayar</option>
-                            </select>
-                        </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-form-label">Isi pengumuman</label>
+                    <div class="col-sm-8">
+                        <textarea class="form-control" rows="5" th:field="*{isi}" required></textarea>
                     </div>
                 </div>
                 <div class="form-group">
