--- a/SistemIuranBEMITD/src/main/resources/templates/Data/BendaharaKelas.html
+++ b/SistemIuranBEMITD/src/main/resources/templates/Data/BendaharaKelas.html
@@ -152,7 +152,7 @@
                 </tr>
             </table>
             <div>
-                <a class="btn btn-info" href="/data/create" style="background: deepskyblue">Tambah Mahasiswa Baru</a>
+                <a class="btn btn-info" href="/bendaharakelas/data/create" style="background: deepskyblue">Tambah Mahasiswa Baru</a>
             </div>
         </div>
 
@@ -184,23 +184,23 @@
         </div>
 
         <!-- Bootstrap core JavaScript-->
-        <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-        <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+        <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+        <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
         <!-- Core plugin JavaScript-->
-        <script th:src="@{vendor/jquery-easing/jquery.easing.min.js}"></script>
+        <script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
 
         <!-- Page level plugin JavaScript-->
-        <script th:src="@{vendor/chart.js/Chart.min.js}"></script>
-        <script th:src="@{vendor/datatables/jquery.dataTables.js}"></script>
-        <script th:src="@{vendor/datatables/dataTables.bootstrap4.js}"></script>
+        <script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
+        <script th:src="@{/vendor/datatables/jquery.dataTables.js}"></script>
+        <script th:src="@{/vendor/datatables/dataTables.bootstrap4.js}"></script>
 
         <!-- Custom scripts for all pages-->
-        <script th:src="@{js/sb-admin.min.js}"></script>
+        <script th:src="@{/js/sb-admin.min.js}"></script>
 
         <!-- Demo scripts for this page-->
-        <script th:src="@{js/demo/datatables-demo.js}"></script>
-        <script th:src="@{js/demo/chart-area-demo.js}"></script>
+        <script th:src="@{/js/demo/datatables-demo.js}"></script>
+        <script th:src="@{/js/demo/chart-area-demo.js}"></script>
 
 </body>
 
