--- a/SistemIuranBEMITD/src/main/resources/templates/Form/formCreateUser.html
+++ b/SistemIuranBEMITD/src/main/resources/templates/Form/formCreateUser.html
@@ -118,20 +118,44 @@
             <li class="breadcrumb-item active">Create</li>
         </ol>
         <hr>
-        <div class="container-fluid">
+        <div class="containe r-fluid">
             <h4>Kelas Baru</h4>
             <br>
-            <form th:object="${kelas}" th:action="@{/bendaharabem/data/create}" method="post">
+            <form th:object="${user}" th:action="@{/bendaharabem/data/create}" method="post">
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Kode Kelas</label>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control" th:field="*{kode}"/>
+                        <input type="text" class="form-control" th:field="*{username}"/>
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Program Studi</label>
+                    <label class="col-sm-2 col-form-label">Fakultas</label>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control" th:field="*{prodi}"/>
+                        <input type="text" class="form-control" th:field="*{fakultas}"/>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Angkatan</label>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:field="*{angkatan}"/>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Password</label>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:field="*{password}"/>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Iuran</label>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:field="*{iuran}"/>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Status</label>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:field="*{status}"/>
                     </div>
                 </div>
                 <div class="form-group">
