--- a/SistemIuranBEMITD/src/main/resources/templates/Form/formEditKelas.html
+++ b/SistemIuranBEMITD/src/main/resources/templates/Form/formEditKelas.html
@@ -12,6 +12,7 @@
     <title>Sistem Iuran BEM</title>
 
     <!-- Bootstrap core CSS-->
+    <link th:href="@{/csss/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
     <!-- Custom fonts for this template-->
@@ -23,15 +24,13 @@
     <!-- Custom styles for this template-->
     <link th:href="@{/css/sb-admin.css}" rel="stylesheet">
 
-    <link th:href="@{/fonts}" rel="stylesheet">
-
 </head>
 
-<body id="page-top" style="background: #f5f5f5">
+<body id="page-top" style="background: #f5f5f5" onLoad="renderTime();">
 
 <nav class="navbar navbar-expand navbar-white bg-white static-top">
 
-    <a class="navbar-brand mr-1" th:href="@{index}"style="color: deepskyblue">
+    <a class="navbar-brand mr-1" th:href="@{/index}"style="color: deepskyblue">
         <img th:src="@{/download.png}" width="75px">
         Sistem Iuran Badan Eksekutif Mahasiswa
     </a>
@@ -85,23 +84,23 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav" style="background: white">
         <li class="nav-item active">
-            <a class="nav-link" th:href="@{/bendaharabem/index}" style="color: deepskyblue">
+            <a class="nav-link" th:href="@{/index}" style="color: deepskyblue">
                 <i class="fas fa-fw fa-tachometer-alt" style="color: deepskyblue"></i>
                 <span>Dashboard</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" th:href="@{/bendaharabem/payment}" style="color: deepskyblue">
+            <a class="nav-link" th:href="@{/payment}" style="color: deepskyblue">
                 <i class="fas fa-fw fa-money-bill" style="color: deepskyblue"></i>
                 <span>Payment</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" th:href="@{/bendaharabem/data}" style="color: deepskyblue">
+            <a class="nav-link" th:href="@{/data}" style="color: deepskyblue">
                 <i class="fas fa-fw fa-database" style="color: deepskyblue"></i>
-                <span>Data Kelas</span></a>
+                <span>Data Mahasiswa</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" th:href="@{/bendaharabem/pengumuman}" style="color: deepskyblue">
+            <a class="nav-link" th:href="@{/pengumuman}" style="color: deepskyblue">
                 <i class="fas fa-fw fa-newspaper" style="color: deepskyblue"></i>
                 <span>Pengumuman</span></a>
         </li>
@@ -111,92 +110,105 @@
     <div id="content-wrapper">
         <ol class="breadcrumb" style="background: #f5f5f5">
             <li class="breadcrumb-item" style="background: #f5f5f5">
-                <a th:href="@{/index}" style="color: deepskyblue" class="fas fa-home">  Home</a>
+                <a th:href="@{/index}" style="color: deepskyblue" class="fas fa-home">   Home</a>
             </li>
-            <li class="breadcrumb-item active">Data Kelas</li>
+            <li class="breadcrumb-item">
+                <a th:href="@{/data}" style="color:deepskyblue">Data</a>
+            </li>
+            <li class="breadcrumb-item active">Edit</li>
         </ol>
         <hr>
         <div class="container-fluid">
-            <table class="table table-stripped table-condensed table-bordered">
-                <tr>
-                    <th>Kode Kelas</th>
-                    <th>Fakultas</th>
-                    <th>Aksi</th>
-                </tr>
-                <tr th:each="users : ${user}">
-                    <td th:text="${users.username}"></td>
-                    <td th:text="${users.fakultas}"></td>
-                    <td>
-                        <div class="btn-group open">
-                            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-                                <span class="fas fa-wrench">  Tools</span>
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                                <li>
-                                    <a th:href="${'/bendaharabem/data/viewdetail/' +users.username}" class="dropdown-item" title="View Detail">
-                                        <span class="fas fa-eye"> View Detail</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a th:href="${'/bendaharabem/data/delete/' +users.username}" class="dropdown-item" title="Delete">
-                                        <span class="fas fa-trash"> Delete</span>
-                                    </a>
-                                </li>
-                            </ul>
+            <h4>Tambah Mahasiswa</h4>
+            <br>
+            <form th:object="${mahasiswa}" th:action="@{/data/create}" method="post">
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">NIM</label>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:field="*{nim}"/>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Nama Mahasiswa</label>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:field="*{nama}"/>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Jumlah Iuran (.Rp)</label>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:field="*{iuran}"/>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Status Pembayaran</label>
+                    <div class="col-sm-2">
+                        <div class="form-group">
+                            <label>Select list</label>
+                            <select class="form-control">
+                                <option value="Belum Bayar">Belum Bayar</option>
+                                <option value="Sudah Bayar">Sudah Bayar</option>
+                            </select>
                         </div>
-                    </td>
-                </tr>
-            </table>
-            <div>
-                <a class="btn btn-info" href="/bendaharabem/data/create" style="background: deepskyblue">Tambah Kelas Baru</a>
-            </div>
-        </div>
-
-        <footer class="sticky-footer" style="background: #f5f5f5">
-            <div class="container my-auto">
-                <div class="copyright text-center my-auto">
-                    <span>Sistem Iuran BEM Copyright © 2018</span>
-                </div>
-            </div>
-        </footer>
-
-        <!-- Logout Modal-->
-        <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">×</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                    <div class="modal-footer">
-                        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                        <a class="btn btn-primary" th:href="@{/login}">Logout</a>
                     </div>
                 </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-default" style="background: deepskyblue">Save</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!--Main-->
+<footer class="sticky-footer" style="background: #f5f5f5">
+    <div class="container my-auto">
+        <div class="copyright text-center my-auto">
+            <span>Sistem Iuran BEM Copyright © 2018</span>
+        </div>
+    </div>
+</footer>
+
+
+<!-- Logout Modal-->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                <a class="btn btn-primary" th:href="@{/login}">Logout</a>
             </div>
         </div>
+    </div>
+</div>
 
-        <!-- Bootstrap core JavaScript-->
-        <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-        <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<!-- Bootstrap core JavaScript-->
+<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/jss/bootstrap.bundle.js}"></script>
+<script th:src="@{/jss/bootstrap.js}"></script>
 
-        <!-- Core plugin JavaScript-->
-        <script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
+<!-- Core plugin JavaScript-->
+<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
 
-        <!-- Page level plugin JavaScript-->
-        <script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
-        <script th:src="@{/vendor/datatables/jquery.dataTables.js}"></script>
-        <script th:src="@{/vendor/datatables/dataTables.bootstrap4.js}"></script>
+<!-- Page level plugin JavaScript-->
+<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
+<script th:src="@{/vendor/datatables/jquery.dataTables.js}"></script>
+<script th:src="@{/vendor/datatables/dataTables.bootstrap4.js}"></script>
 
-        <!-- Custom scripts for all pages-->
-        <script th:src="@{/js/sb-admin.min.js}"></script>
+<!-- Custom scripts for all pages-->
+<script th:src="@{/js/sb-admin.min.js}"></script>
 
-        <!-- Demo scripts for this page-->
-        <script th:src="@{/js/demo/datatables-demo.js}"></script>
-        <script th:src="@{/js/demo/chart-area-demo.js}"></script>
+<!-- Demo scripts for this page-->
+<script th:src="@{/js/demo/datatables-demo.js}"></script>
+<script th:src="@{/js/demo/chart-area-demo.js}"></script>
 
 </body>
 
